Create modal with company info that shows upon clicking on the name of a company

--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -81,3 +81,18 @@ body {
   color: #fff;
   background-color: #35495e;
 }
+
+.clickable-row {
+  cursor: pointer;
+
+  &:hover {
+    font-weight: 500;
+    &:after {
+      font-family: 'FontAwesome';
+      margin-left: 0.5rem;
+      color: $blue;
+      content: "\f05a";
+      font-size: 12pt;
+    }
+  }
+}
