Create statistics landing page (#9)
* statistics landing page is ready with link to each activity and country. Spinner added as a component for reusability. Font awesome solid icons added.

* Table in providers page filled with the available data

* Various adjustments

Co-authored-by: aposkarag <aposkarag@islab.ece.ntua.gr>
Co-authored-by: Spyros Bekiaris <spirosbekos@gmail.com>

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -639,6 +639,9 @@ body {
 								text-decoration: underline;
 							}
 						}
+            .source {
+              height: 80px;
+            }
 					}
 
 					// column
@@ -805,7 +808,7 @@ body {
 						a {
 							@include clearfix();
 							display: flex;
-							align-items: flex-end;
+							align-items: flex-start;
 							text-decoration: none;
 
 							// icon
