Create company-details page (#16)
* fontawesome imported in the component

* Reverting to previous commit

* first commit for company details. Most of the functionalities are working.

* added nuts3 in the region pill

* added company's nuts3 simple map in company details page

* region with company's lau is filled with color in the map

* added error message when the company does not exist

* added a button for loading more when there are too many activities

* Change company-page parameter passing from pathMatch to query.uri

* Linting fixes

Co-authored-by: aposkarag <aposkarag@islab.ece.ntua.gr>
Co-authored-by: Spyros Bekiaris <spirosbekos@gmail.com>

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1318,6 +1318,9 @@ body {
 				.row {
 					padding: 15px 0;
 					border-bottom: 1px solid #E4E8EE;
+          &.content-row{
+            border: transparent;
+          }
 					.head {
 						font-weight: 500;
 					}
@@ -2338,6 +2341,25 @@ body {
 			&:last-child {
 				border-bottom: 0px;
 			}
+      span{
+        &.pill{
+          font-size: 0.875rem;
+          padding: 2px 15px 2px 15px;
+          border-radius: 5px;
+          background-color: white;
+          border: 1px solid $pills-color;
+          color: $pills-color;
+          display: inline-block;
+          transition: 0.3s;
+          cursor: pointer;
+
+          &:hover{
+            background-color: $pills-color;
+            color: white;
+            text-decoration: underline;
+          }
+        }
+      }
 		}
 	}
 
