--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1784,6 +1784,9 @@ body {
 							background-repeat: no-repeat;
 							background-position: 0 4px;
 							line-height: 1.563rem;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
 						}
 						input[type="checkbox"]:checked + label {
 							background-image: url('../img/ic-checkbox.png');
@@ -1821,11 +1824,12 @@ body {
 					}
 
 					// nav tags
-					.nav-tabs {
+          .nav-tabs  {
 						border: 0;
 						margin-bottom: 20px;
-						button {
+            .nav-link {
 							border: 0;
+              color: black;
 							background: transparent;
 							font-size: 1.5rem;
 							opacity: 0.4;
@@ -1844,30 +1848,74 @@ body {
 						// accordion
 						.accordion-heading {
 							border-bottom: 3px solid $accent-second-color;
-							margin-bottom: 0;
-							.accordion-button {
-								padding: 10px 0 10px 0;
-								font-size: 1.25rem;
-								background: transparent;
-								color: inherit;
-								text-decoration: none;
-								box-shadow: none;
-								&.collapse {
-									background: transparent;
-								}
-								&::after {
-									background: $accent-second-color;
-									color: #fff;
-									padding: 20px;
-									border-radius: 50%;
-									position: absolute;
-									right: -39px;
-									top: 32px;
-									background-image: url('../img/ic-caret-white.png');
-									background-repeat: no-repeat;
-									background-position: center;
-								}
-							}
+              margin-bottom: 0px;
+              cursor: pointer;
+              padding: 10px 0 10px 0;
+              position:relative;
+              .accordion-statistics-button {
+                padding: 10px 0 10px 0;
+                font-size: 1.25rem;
+                background: transparent;
+                color: inherit;
+                text-decoration: none;
+                box-shadow: none;
+                &.collapse {
+                  background: transparent;
+                }
+                &::after {
+                  content: "";
+                  background: $accent-second-color;
+                  color: #fff;
+                  padding: 20px;
+                  border-radius: 50%;
+                  position: absolute;
+                  right: -38px;
+                  top: 33px;
+                  background-image: url("../img/ic-caret-white.png");
+                  background-repeat: no-repeat;
+                  background-position: center;
+                  transition: 0.3s;
+                }
+              }
+              &.collapsed{
+                .accordion-statistics-button{
+                  &::after {
+                    transform: rotate(180deg);
+                  }
+                }
+              }
+              .accordion-companies-button {
+              padding: 10px 0 10px 0;
+              font-size: 1.25rem;
+              background: transparent;
+              color: inherit;
+              text-decoration: none;
+              box-shadow: none;
+              &.collapse {
+                background: transparent;
+              }
+              &::after {
+                content: "";
+                background: $accent-second-color;
+                color: #fff;
+                padding: 20px ;
+                border-radius: 50%;
+                position: absolute;
+                right: -38px;
+                top: 33px;
+                background-image: url('../img/ic-caret-white.png');
+                background-repeat: no-repeat;
+                background-position: center;
+                transition: 0.3s
+              }
+            }
+            &.collapsed{
+              .accordion-companies-button{
+                &::after {
+                  transform: rotate(180deg);
+                }
+              }
+            }
 						}
 
 						// accordigon content
@@ -1913,7 +1961,11 @@ body {
 										background: $accent-first-color;
 									}
 								}
-								.btn-check:checked+.btn-outline-primary {
+                .btn-check:checked + .btn-outline-primary {
+                  color: #fff;
+                  background: $accent-first-color;
+                }
+                .btn-check .active {
 									color: #fff;
 									background: $accent-first-color;
 								}
@@ -2029,6 +2081,7 @@ body {
 				}
 			}
 			.datepicker {
+        height: 52px;
 				border: 1px solid #4A5569;
 				border-radius: 4px;
 				position: relative;
@@ -2474,21 +2527,20 @@ body {
 			}
 
 		}
-
 	}
-	.tooltip.bs-tooltip-top .tooltip-arrow::before {
+	.tooltip.bs-tooltip-top .arrow::before {
 		border-top-color: $accent-first-color;
 	}
 
-	.tooltip.bs-tooltip-bottom .tooltip-arrow::before {
+	.tooltip.bs-tooltip-bottom .arrow::before {
 		border-bottom-color: $accent-first-color;
 	}
 
-	.tooltip.bs-tooltip-start .tooltip-arrow::before {
+	.tooltip.bs-tooltip-start .arrow::before {
 		border-left-color: $accent-first-color;
 	}
 
-	.tooltip.bs-tooltip-end .tooltip-arrow::before {
+	.tooltip.bs-tooltip-end .arrow::before {
 		border-right-color: $accent-first-color;
 		bottom: 8px;
 	}
