--- a/src/assets/scss/mixin.scss
+++ b/src/assets/scss/mixin.scss
@@ -258,6 +258,20 @@
         }
       }
 
+      .explore-progress{
+        .progress {
+          margin: 11px 0 0;
+          width: 100%;
+          height: 6px;
+          border-radius: 3px;
+          background-color: #D8D8D8;
+
+          .progress-bar {
+            background-color: #355faa !important;
+          }
+      }
+      }
+
       .stat {
         float: right;
         font-size: 0.933rem;
