--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -16,6 +16,9 @@ $pills-color: #97CC04;
 $text-first-color: #21314D;
 $text-second-color: #4A5569;
 
+// forms
+$form-select-indicator: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+
 // font variables used
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,500;1,400;1,500&display=swap');
 $font-family: "Jost","Avenir","sans-serif";
