--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1717,7 +1717,7 @@ body {
 								}
 
 								// anchor
-								a {
+								div {
 									color: $text-first-color;
 
 									// more less toggle
@@ -1741,7 +1741,8 @@ body {
 									}
 
 									// showing section
-									&.showing {
+									&.showing,
+                  &.not-collapsed {
 
 										// set expand icon to hide icon
 										span.expand {
@@ -2544,6 +2545,43 @@ body {
 		border-right-color: $accent-first-color;
 		bottom: 8px;
 	}
+}
+
+.expandList {
+  animation: expandListAnimation 0.2s ease-in-out forwards;
+}
+
+@keyframes expandListAnimation {
+  0% {
+    display: none;
+    opacity: 0;
+  }
+  1% {
+    display: block;
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  // 0% {
+  //   display: none;
+  //   opacity: 0;
+  // }
+  // 1% {
+  //   display: block;
+  //   opacity: 0;
+  //   transform: translateY(0%)
+  // }
+  // 50%{
+  //     opacity: 1;
+  //     transform: translateY(5%)
+  // }
+  // 100%{
+  //     opacity: 1;
+  //     transform: translateY(0%)
+  // }
 }
 
 // responsive
