Implement saved-views functionality (#22)
* currentView object gets created

* saved view functionalities added in profile and explore page

* Various adjustments regarding saved views

Co-authored-by: aposkarag <aposkarag@islab.ece.ntua.gr>
Co-authored-by: Spyros Bekiaris <spirosbekos@gmail.com>

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1381,6 +1381,14 @@ body {
 			.profile-content {
 				padding: 0 0px 0 40px;
 
+        a {
+          &.anchor {
+            @include simple-anchor($text-first-color);
+            cursor: pointer;
+            @include text-highlight($accent-second-color, 10px);
+          }
+        }
+
 				// filterlist
 				.filterlist {
 					margin-bottom: 20px;
