--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -457,7 +457,8 @@ body {
 				}
 				.contactwrap {
 					position: absolute;
-					bottom: 0px;
+          top: 0;
+					// bottom: 0px;
 					left: 0px;
 					padding: 0 40px 0 10px;
 
