Implement region features filter in explore page (#24)
* Create getRegionFeatures call and relevant store state-variable, mutation, action

* Create Region Features filter in explore page's sidemenu

* Add region-features support in search call and saved-views calls

* small change in ResultsCompanies to avoid error,  when in the api response there is no page.totalResults field

* Design adjustments in explore-page's filter sidemenu

* Fix tooltips in statistics subpages

* Hide group-by-date button in explore-page, at the result-statistics section

Co-authored-by: aposkarag <aposkarag@islab.ece.ntua.gr>

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2546,6 +2546,14 @@ body {
 		border-bottom-color: $accent-first-color;
 	}
 
+  .tooltip.bs-tooltip-right .arrow::before {
+    border-right-color: $accent-first-color;
+  }
+
+  .tooltip.bs-tooltip-left .arrow::before {
+    border-left-color: $accent-first-color;
+  }
+
 	.tooltip.bs-tooltip-start .arrow::before {
 		border-left-color: $accent-first-color;
 	}
