--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2373,6 +2373,13 @@ body {
 							background-image:url("../img/ic-hierarchy.png");
 							background-repeat: no-repeat;
 						}
+            &.no-parent-separator{
+              margin-left: -40px;
+              &::after{
+                width: 0;
+                height: 0;
+              }
+            }
 					}
 
 					// pill
