[SD-3] collapsable elements rendered dynamically

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1798,7 +1798,8 @@ body {
               overflow: hidden;
               text-overflow: ellipsis;
 						}
-						input[type="checkbox"]:checked + label {
+						input[type="checkbox"]:checked + label,
+						input[type="radio"]:checked + label {
 							background-image: url('../img/ic-checkbox.png');
 						}
 					}
