[SD-64 sign-up hide and moved inside burger menu

--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -696,6 +696,9 @@
               &.sign {
                 display: none;
               }
+              &.sign-up {
+                display: none;
+              }
             }
           }
         }
