[SD-64] social centered

--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -593,6 +593,9 @@
           }
         }
       }
+      .social {
+        justify-content: center;
+      }
     }
     // hide tooltip
     .tooltip {
