[SD-64] stat section title aligned left

--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -396,6 +396,9 @@
         .homepage-stat-region {
           margin-top: 50px;
           padding: 0;
+          h2 {
+            text-align: left;
+          }
         }
         // trend
         .homepage-stat-trend {
