--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1179,6 +1179,7 @@ body {
 								margin-right: 15px;
 								img {
 									width: 75px;
+                  aspect-ratio: 1;
 								}
 							}
 							.text {
